# nirip

./: .gitignore  .tmuxp.yaml  AGENTS.md  devenv.nix  nirip.nimble  pyproject.toml
.scratch/: CRITICAL_RULES.md  REPO_RULES.md
.scratch/projects/001-initial-concepting/: CONCEPT_REVIEW.md  IMPLEMENTATION_PLAN.md
.scratch/projects/002-revised-concept/: IMPLEMENTATION_PLAN.md  NIRIP_CONCEPT.md
.scratch/projects/003-revised-concept-v2/: NIRIP_CONCEPT.md  REFINED_SIDEBARD_CONCEPT.md  REVISED_NIRIP_v2_CONCEPT.md
.scratch/projects/004-final-concept/: NIRIP_IMPLEMENTATION_GUIDE.md
.scratch/projects/005-python-v3-niri-pypc/: nirip_concept.md
.scratch/projects/006-v3-revised-python-concept/: CONCEPT_REVIEW.md  NIRIP_CONCEPT.md  NIRIP_CONCEPT_FINAL.md  NIRIP_IMPLEMENTATION_GUIDE.md  Nirip_Architecture_Concepting-Deep_Research.md
.scratch/projects/007-niri-implementation/: README.md
.scratch/projects/007-nirip-implementation/: README.md
.scratch/projects/008-nirip-code-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md  REVIEW_REFACTOR_GUIDE.md  REVIEW_REPORT.md
.scratch/projects/009-revised-dependency-code-review/: Nirip_Code_Review_Research.md  RESEARCH_REPORT_ANALYSIS.md
.scratch/projects/010-refined-concept/: CODE_REVIEW_REFACTOR.md  NIRIP_CODE_REVIEW.md  NIRIP_REFINED_CONCEPT.md  REFACTOR_PLAN_REVIEW.md  REFINED_CONCEPT_IMPLEMENTATION_GUIDE.md
.scratch/projects/011-handler-refactor/: CONCEPTUAL_SIMPLIFICATION.md  REFACTOR_PLAN.md
.scratch/projects/012-simplification-refactor/: FINAL_REVIEW.md  SIMPLIFICATION_REFACTOR_PLAN.md
.scratch/projects/013-review-refactor/: FINAL_REVIEW_REFACTOR.md
.scratch/projects/014-final-review/: FINAL_REVIEW.md  NUCLEAR_REFACTOR_CONCEPT.md  REFACTORING_IDEAS.md  progress.md
.scratch/projects/015-nuclear-refactor/: FINAL_NUCLEAR_REFACTOR.md  NUCLEAR_CODE_REVIEW.md  NUCLEAR_REFACTOR_GUIDE.md  UPDATED_NUCLEAR_CODE_REVIEW.md  progress.md
.scratch/skills/sidebard-contracts/: SKILL.md
.scratch/skills/sidebard-diagnostics/: SKILL.md
.scratch/skills/sidebard-structure/: SKILL.md
.scratch/skills/sidebard-validation/: SKILL.md
src/: cli.nim  nirip.nim
src/core/: config.nim  diagnostics.nim  freezer.nim  matcher.nim  planner.nim  types.nim
src/executor/: focus.nim  launcher.nim  runner.nim
src/integrations/: sidebard_rpc.nim
src/nirip/: __init__.py  __main__.py  _base.py  capture.py  cli.py  config.py  errors.py  execute.py  plan.py  resolve.py  spec.py
src/nirip/capture/: __init__.py  capturer.py  inference.py
src/nirip/cli/: __init__.py  commands.py  formatting.py  main.py
src/nirip/execution/: __init__.py  _checks.py  actions.py  executor.py  handlers.py  hooks.py  models.py  predicates.py  runtime.py
src/nirip/facade/: __init__.py  async_nirip.py  sync_nirip.py
src/nirip/planning/: __init__.py  builder.py  compiler.py  (+2 more)
src/state/: managed.nim
tests/: conftest.py  test_base.py  test_capture.py  test_capturer.py  test_cli.py  test_cli_formatting.py  test_compiler.py  test_compiler_depends_on.py  test_compiler_spawn_placement.py  test_config.nim  test_config.py  test_diagnostics.nim  test_errors.py  test_execute.py  test_executor.py  test_freezer.nim  test_integration.py  test_matcher.nim  test_matcher.py  test_matcher_resolver_planning.py  test_normalizer.py  test_ordering.py  test_plan.py  test_plan_builder.py  test_planner.nim  test_planning_models.py  test_resolve.py  test_resolver_drift.py  test_spec.py  test_spec_defaults.py  test_spec_loader.py  test_spec_models.py  test_spec_validators.py  test_types.nim
tests/fixtures/: dev-day.yaml
(+14 files in other folders)
