[project]
name = "nirip"
version = "0.1.0"
description = "NIRIP Python project."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "pydantic>=2.12.5",
  "niri-pypc",
  "niri-state",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.10",
  "ruff>=0.5.0",
]

[tool.uv.sources]
niri-pypc = { git = "https://github.com/Bullish-Design/niri-pypc.git", tag = "v0.3.1" }
niri-state = { git = "https://github.com/Bullish-Design/niri-state.git", tag = "v0.2.0" }


#[project.urls]
#homepage = "https://github.com/Bullish-Design/nirip"
#repository = "https://github.com/Bullish-Design/nirip.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/nirip)
packages = ["src/nirip"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
addopts = "-q --cov=nirip --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
packages = ["src/nirip"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
