[project]
name = "nirip"
version = "0.1.2"
description = "NIRIP Python project."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "pydantic>=2.12.5",
  "niri-pypc>=0.5.0",
  "niri-state>=0.2.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "ty",
  "ruff>=0.5.0",
]

[tool.uv.sources]
niri-pypc = { git = "https://github.com/Bullish-Design/niri-pypc.git", tag = "v0.5.0" }
niri-state = { git = "https://github.com/Bullish-Design/niri-state.git", tag = "v0.2.5" }


#[project.urls]
#homepage = "https://github.com/Bullish-Design/nirip"
#repository = "https://github.com/Bullish-Design/nirip.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/nirip)
packages = ["src/nirip"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
addopts = "-q --cov=nirip --cov-report=term-missing"
testpaths = ["tests"]

[tool.ty.src]
include = ["src"]
exclude = []

[tool.ty.environment]
python-version = "3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
